# AICIS

./: .dockerignore  .env.example  .gitignore  Dockerfile  PRD.md  README.md  docker-compose.yml  main.py  pyproject.toml  temp.py
.trae/documents/: mongodb-to-milvus-migration-plan.md  mongodb_to_chromadb_plan.md
backend/: admin_api.py  agent.py  api.py  app.py  auth.py  db.py  embedding.py  migrate_news.py  milvus_client.py  parent_chunk_store.py  rag_pipeline.py  rag_utils.py  schemas.py  sso.py  tools.py
frontend/: embed.js  index.html  script.js  style.css
frontend/admin/: admin.css  admin.js  index.html
